--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -84,10 +84,8 @@
     <div id="2024_904905" class="margin-control" style="margin-top: 15vw">
         <a href="#main"><h1 class="white">904Z / 905Z</h1></a>
         <div class="objekt_grid">
-            <!-- <div id="S17"><a href="https://wav-view.netlify.app/#teaser">
-                <img src="main-page-source/nxtsoon_S17.png" alt="S17_NXT"></a></div>
-            <div id="S20"><a href="https://wav-view.netlify.app/#teaser">
-                <img src="main-page-source/nxtsoon_S173.png" alt="S20_NXT"></a></div> -->
+            <div id="S17"><a href="https://wav-view.netlify.app/F-Ev3Hg-VOQ132319doitallS17904">
+                <img src="objekt-front-page/F-Ev3Hg-VOQ132319doitallS17904.png" alt="S17"></a></div>
             <div id="S01"> <img src="main-page-source/nxtsoon1.png" alt="최근 옵젝이 없어요"> </div>
             <div id="S02"><img src="main-page-source/nxtsoon2.png" alt="최근 옵젝이 없어요"></div>
         </div>
